force-app/main/default/objects/Partnership__c/Partnership__c.object-meta.xml
<CustomObject>
    <description>The Partnership object serves as a connector between diverse organizations, facilitating strategic alliances that amplify productivity and propel towards success. This object unlocks the ability to create opportunities linked to the specific partnership.</description>
    <label>Samenwerkingsverband</label>
    <nameField>
        <label>Partnership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Samenwerkingsverbanden</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>