force-app/main/default/objects/Partnership__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Captures the primary email address for the partnership.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>