force-app/main/default/objects/Partnership__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Captures the end date of the partnership.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>