force-app/main/default/objects/Partnership__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox needs to be checked when the Partnership is active. This field is partially controlled by start and end dates</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>