force-app/main/default/objects/Partnership__c/fields/IsLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>IsLegalEntity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox needs to be checked if the partnership is registered as a legal entity.</description>
    <inlineHelpText>This checkbox needs to be checked if the partnership is registered as a legal entity.</inlineHelpText>
    <label>Legal Entity</label>
    <type>Checkbox</type>
</CustomField>