force-app/main/default/objects/Partnership__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>General mobile phone number of the partnership.</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>