force-app/main/default/objects/Partnership__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Captures the primary phone number for the partnership.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>