force-app/main/default/objects/Partnership__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Captures the start date of the partnership.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>