force-app/main/default/objects/Partnership__c/fields/TypeOfPartnershipPick__c.field-meta.xml
<CustomField>
    <fullName>TypeOfPartnershipPick__c</fullName>
    <inlineHelpText>What type of Partnership is there?</inlineHelpText>
    <label>Type of Partnership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Town Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>