force-app/main/default/objects/Partnership__c/fields/TypePick__c.field-meta.xml
<CustomField>
    <fullName>TypePick__c</fullName>
    <description>Field to categorize the type of partnership associated with the record.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Indefinite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>