force-app/main/default/objects/Partnership__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>This field can be used to connect a website that displays the partnership.</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>