force-app/main/default/objects/Partnership__c/recordTypes/HeijmansPartnershipRecordType.recordType-meta.xml
<RecordType>
    <fullName>HeijmansPartnershipRecordType</fullName>
    <active>true</active>
    <label>Heijmans - Partnership</label>
</RecordType>