force-app/main/default/objects/Partnership__c/recordTypes/HeijmansTownCentersRecordType.recordType-meta.xml
<RecordType>
    <fullName>HeijmansTownCentersRecordType</fullName>
    <active>true</active>
    <label>Heijmans - Town Centers</label>
</RecordType>