force-app/main/default/objects/Partnership__c/validationRules/PAR_VR01_EndDateBeforeStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>PAR_VR01_EndDateBeforeStartDate</fullName>
    <active>true</active>
    <description>The Start date cannot be for the end date. [VR01]</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(StartDate__c)), 
  NOT(ISBLANK(EndDate__c)), 
  EndDate__c &lt; StartDate__c,
  $Setup.BypassSettings__c.ValidationRules__c = False
)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>The end date cannot be before the start date. [VR01]</errorMessage>
</ValidationRule>