force-app/main/default/objects/Partnership__c/validationRules/PAR_VR02_PhoneFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>PAR_VR02_PhoneFormat</fullName>
    <active>true</active>
    <description>You need to insert the phone number in the correct format. See example: +31111000111 [VR02]</description>
    <errorConditionFormula>AND (
Not (ISBLANK (Phone__c)),
$Setup.BypassSettings__c.ValidationRules__c = False,
NOT(REGEX(Phone__c, &quot;^\\+?[1-9]\\d{1,14}$&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>You need to insert the phone number in the correct format. See example: +31111000111 [VR02]</errorMessage>
</ValidationRule>