force-app/main/default/objects/Partnership__c/validationRules/PAR_VR03_MobileFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>PAR_VR03_MobileFormat</fullName>
    <active>true</active>
    <description>You need to insert the phone number in the correct format. See example: +31611111111 [VR03]</description>
    <errorConditionFormula>AND (
Not (ISBLANK (Mobile__c)),
$Setup.BypassSettings__c.ValidationRules__c = False,
NOT(REGEX(Mobile__c, &quot;^\\+?[1-9]\\d{1,14}$&quot;)))</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>You need to insert the phone number in the correct format. See example: +31111000111 [VR03]</errorMessage>
</ValidationRule>