force-app/main/default/objects/Partnership__c/validationRules/PAR_VR04_StardAndEndDateRequiredTemp.validationRule-meta.xml
<ValidationRule>
    <fullName>PAR_VR04_StardAndEndDateRequiredTemp</fullName>
    <active>true</active>
    <description>When you set the type to Temporary the End Date is required. [VR04]</description>
    <errorConditionFormula>AND(
  ISPICKVAL(TypePick__c, &quot;Temporary&quot;),
  ISBLANK(EndDate__c),
  $Setup.BypassSettings__c.ValidationRules__c = False
)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>Please make sure to set the end date of the Partnership. [VR04]</errorMessage>
</ValidationRule>