force-app/main/default/objects/Partnership__c/validationRules/PAR_VR05_EndDateIsRequiredWhenInactive.validationRule-meta.xml
<ValidationRule>
    <fullName>PAR_VR05_EndDateIsRequiredWhenInactive</fullName>
    <active>true</active>
    <description>When a partnership is inactive an end date is required.</description>
    <errorConditionFormula>AND(IsActive__c = false,
ISBLANK( EndDate__c )
)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>Inactive partnerships must have an end date specified. [VR05]</errorMessage>
</ValidationRule>