force-app/main/default/objects/Partnership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TypePick__c</columns>
    <columns>IsActive__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>IsLegalEntity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>