force-app/main/default/objects/Partnership__c/listViews/Alle_active_doorlopende_samenwerkingen.listView-meta.xml
<ListView>
    <fullName>Alle_active_doorlopende_samenwerkingen</fullName>
    <columns>NAME</columns>
    <columns>TypePick__c</columns>
    <columns>IsActive__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>IsLegalEntity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TypePick__c</field>
        <operation>equals</operation>
        <value>Indefinite</value>
    </filters>
    <label>Alle active doorlopende samenwerkingen</label>
</ListView>