force-app/main/default/objects/Partnership__c/listViews/Alle_inactieve_samenwerkingsverbanden.listView-meta.xml
<ListView>
    <fullName>Alle_inactieve_samenwerkingsverbanden</fullName>
    <columns>NAME</columns>
    <columns>TypePick__c</columns>
    <columns>IsActive__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>IsLegalEntity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Alle inactieve samenwerkingsverbanden</label>
</ListView>