force-app/main/default/objects/Partnership__c/listViews/Alle_samenwerkingen_zonder_startdatum.listView-meta.xml
<ListView>
    <fullName>Alle_samenwerkingen_zonder_startdatum</fullName>
    <columns>NAME</columns>
    <columns>TypePick__c</columns>
    <columns>IsActive__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>IsLegalEntity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StartDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>Alle samenwerkingen zonder startdatum</label>
</ListView>